--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/arrismo/budget-better#readme",
   "dependencies": {
-    "create-react-app": "^3.3.0"
+    "create-react-app": "^3.3.0",
+    "firebase": "^7.6.1",
+    "firebase-admin": "^8.9.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   }
 }
