--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "create-react-app": "^3.3.0",
     "firebase": "^7.6.1",
     "firebase-admin": "^8.9.0",
+    "mdbootstrap": "^4.11.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2"
   }
